# your-issue-is-unclear

./: .env.example  .gitignore  README.md  pyproject.toml
config/: repos.example.toml
docs/: project-plan.md
src/github_issue_analyzer/: __init__.py  branding.py  cli.py  config.py  db.py  models.py  paths.py  utils.py
src/github_issue_analyzer/agent/: codex.py  factory.py
src/github_issue_analyzer/github/: auth.py  client.py  personal_project_client.py
src/github_issue_analyzer/services/: bootstrap.py  project_metadata.py  worker.py
src/github_issue_analyzer/workflow/: clarification.py  comments.py  service.py
tests/: test_agent_codex.py  test_clarification.py  test_cli.py  test_comments.py  test_config.py  test_project_metadata.py  test_workflow_service.py
